# cmake_structure_proto

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  conanfile.txt
engine/client_engine/: CMakeLists.txt  conanfile.py
engine/client_engine/src/cstdmf/: CMakeLists.txt
engine/client_engine/src/cstdmf/test/: CMakeLists.txt
engine/client_engine/src/resmgr/: CMakeLists.txt  reloadable.cpp  res_management.cpp
engine/client_engine/src/resmgr/include/resmgr/: factory.hpp  reloadable.hpp  res_management.hpp
engine/client_engine/src/resmgr/test/: CMakeLists.txt
engine/client_engine/src/resmgr_v2/: CMakeLists.txt  factory.cpp  res_management.cpp
engine/client_engine/src/resmgr_v2/test/: test_api.cpp
engine/common/: CMakeLists.txt  conanfile.py
engine/common/src/networking/: CMakeLists.txt  protocol.cpp
engine/common/src/networking/include/networking/: protocol.hpp
game/res/: README.md
programming/client/: CMakeLists.txt  README.md  conanfile.txt
programming/client/src/executable/: CMakeLists.txt  main.cpp
programming/client/src/libs/: CmakeLists.txt
programming/common/: CMakeLists.txt  README.md  conanfile.py
programming/common/cmake/: encore_commonConfig.cmake
programming/common/src/cstdmf/: CMakeLists.txt  singleton.cpp
programming/common/src/cstdmf/include/cstdmf/: singleton.hpp
programming/common/src/cstdmf/test/: test_api.cpp
programming/common/src/networking/: CMakeLists.txt  protocol.cpp
programming/common/src/networking/include/networking/: protocol.hpp
programming/common/src/networking/test/: CMakeLists.txt  test_api.cpp
programming/server/: README.md
programming/testing/: README.md
programming/tools/: README.md
